# services-test2

./: .editorconfig  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  pre-commit-autoupdate.yml  publish.yml  release.yml  stale.yml
changelog/: index.html
cli/: index.html
docs/: changelog.md  cli.md  gen_ref_pages.py
license/: index.html
reference/: SUMMARY.txt  index.html
reference/cli/: index.html
reference/lib/: index.html
search/: search_index.json
src/services_test/: __init__.py  cli.py
src/services_test2/: __init__.py  __main__.py  cli.py  lib.py
templates/: CHANGELOG.md.j2
tests/: test_cli.py  test_lib.py  test_main.py
